sidux-hermes (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Qt4: update time changed
  * Cli: kernel function added
  * QT4: Kernel function added
  * Gtk2: conlicts tag updated

  [ Stefan Lippers-Hollmann ]
  * add ${misc:Depends} where needed.

  [ Fabian Wuertz ]
  * QT4: upgradable packages dialog added.
  * QT4: sidux-apt-qt4 options added. 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 06 Feb 2009 18:57:27 +0100