@@ -13,5 +13,6 @@ sidux-hermes (0.1.0) unstable; urgency=low
   [ Fabian Wuertz ]
   * QT4: upgradable packages dialog added.
   * QT4: sidux-apt-qt4 options added. 
+  * QT4: display upgradable packages function updated.
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 06 Feb 2009 18:57:27 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 07 Feb 2009 10:40:04 +0100
